# string_calculator_1

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: compiler_flags.cmake
lib/: CMakeLists.txt
lib/src/: string_calculator.cc  string_calculator.h
tests/: CMakeLists.txt
tests/src/: main.cc  string_calculator_test.cc  string_calculator_test.h
